Modify #149 : 입주자가 진행 중인 평가 정보를 조회할 때 평가 완료 여부를 boolean으로 반환하는 멤버 변수 추가